Linux/Mac support + Fx Mapping